--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,15 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Program",
+            "program": "${workspaceFolder}/buffer.js",
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
+        },
+        {
             "name": "Python: Run",
             "type": "python",
             "request": "launch",
@@ -11,7 +20,7 @@
             "stopOnEntry": false,
             "justMyCode": false,
             "console": "integratedTerminal",
-            "pythonPath": "${config:python.pythonPath}"
+            "pythonPath": "${config:python.interpreterPath}"
         },
     ]
 }
